--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
+        "psr/log": "^1.1",
+        "shopify/shopify-api": "^2.0",
         "spatie/laravel-webhook-client": "^3.1",
         "spatie/laravel-webhook-server": "^3.1"
     },
@@ -24,6 +26,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
+            "API\\": "API/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         }
